--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -1,5 +1,11 @@
 /* purgecss start ignore */
 @tailwind base;
+
+html {
+  @apply font-sans antialiased;
+
+  font-size: 16px;
+}
 /* purgecss end ignore */
 
 @tailwind components;
