--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -1,12 +1,17 @@
-/* purgecss start ignore */
+@import url('/font/inter.css');
+
 @tailwind base;
 
 html {
-  @apply font-sans antialiased;
+  @apply leading-none antialiased;
 
   font-size: 16px;
+  font-family: Inter, theme('fontFamily.sans');
+
+  @supports (font-variation-settings: normal) {
+    font-family: 'Inter var', theme('fontFamily.sans');
+  }
 }
-/* purgecss end ignore */
 
 @tailwind components;
 
